# base

./: .gitignore  CMakeLists.txt  Makefile  cellrendererspin.c  gui.c  gui.h  jde.c  jde.h  jdeservers.h  pioneer.c  pioneer.h  preferences.c  preferences.h  schemas.c  schemas.h  visualization3d.c  visualization3d.h
gui/: jde.glade  jde.gladep
schemas/: example.c  goon.c  hijo1.c  hijo2.c  make_example  make_export  make_gui  make_padre  padre.c  schema_export1.c  schema_export2.c  schema_gui.c  stop.c  vff.c
schemas/gui/: gui.glade  gui.gladep
schemas/master/: master.glade
src/: CMakeLists.txt
src/stable/components/cameraserver/: CMakeLists.txt
src/stable/components/rtabmap/: CMakeLists.txt  CMakeLists.txt.test  rtabmap-kinect.cfg  rtabmap.cfg  rtabmap.cpp
src/stable/components/rtabmap/app/src/: CMakeLists.txt  main.cpp
src/stable/components/rtabmap/corelib/include/rtabmap/core/: CameraRGBD.h  CameraThread.h  Parameters.h
src/stable/components/rtabmap/corelib/src/: CMakeLists.txt  CameraRGBD.cpp  CameraThread.cpp  DatabaseSchema_sql.h  OdometryThread.cpp  RtabmapThread.cpp  Transform.cpp
src/stable/components/rtabmap/examples/RGBDMapping/: CMakeLists.txt
src/stable/components/rtabmap/examples/WifiMapping/: CMakeLists.txt
src/stable/components/rtabmap/guilib/include/rtabmap/gui/: CloudViewer.h  MainWindow.h  PreferencesDialog.h
src/stable/components/rtabmap/guilib/src/: CMakeLists.txt  CloudViewer.cpp  MainWindow.cpp  PreferencesDialog.cpp  ui_DatabaseViewer.h  ui_aboutDialog.h  ui_calibrationDialog.h  ui_consoleWidget.h  ui_exportCloudsDialog.h  ui_exportDialog.h  ui_loopClosureViewer.h  ui_mainWindow.h  ui_postProcessingDialog.h  ui_preferencesDialog.h
src/stable/components/rtabmap/guilib/src/ui/: mainWindow.ui  preferencesDialog.ui
src/stable/components/rtabmap/tools/: CMakeLists.txt
src/stable/components/rtabmap/tools/Calibration/: CMakeLists.txt
src/stable/components/rtabmap/tools/CameraRGBD/: CMakeLists.txt  main.cpp
src/stable/components/rtabmap/tools/ConsoleApp/: main.cpp
src/stable/components/rtabmap/tools/DataRecorder/: CMakeLists.txt
src/stable/components/rtabmap/tools/ImagesJoiner/: CMakeLists.txt
src/stable/components/rtabmap/tools/OdometryViewer/: CMakeLists.txt
src/stable/libs/jderobotutil/: CMakeLists.txt  CameraTask.h
src/stable/libs/parallelIce/: CMakeLists.txt  cameraClient.h
trunk/: AUTHORS  ChangeLog  Makefile.am  README  TODO  configure.in
trunk/corejde+/: Makefile.am
trunk/corejde+/include/: Makefile.am
trunk/corejde+/include/jde+/: Makefile.am  conditionallock.h  data.h  hierarchy.h  isc.h  message.h  messageprocessor.h  pointer.h  privatedata.h  schemaimplementation.h  schemainstance.h  schemainstancefacade.h  schemainterface.h  schemastate.h  schematypes.h  singleton.h  util.h
trunk/corejde+/src/: Makefile.am  data.cpp  hierarchy.cpp  isc.cpp  message.cpp  schemaimplementation.cpp  schemainstance.cpp  schemastate.cpp  schematypes.cpp  util.cpp
trunk/corejde+/src/tests/: test_condition.cpp  test_pointer.cpp  test_read_write_mutex.cpp  test_scoped_lock.cpp
trunk/docs/: Makefile.am  doxygen.conf.in  jde+.xmi  manual_usuario.tex
trunk/tools/: Makefile.am
trunk/tools/autoproject/: Makefile.am  configure.in.tpl  jdeinit_project.in
trunk/tools/jde+scope/: Makefile.am  jdescope.cpp  jdescope.glade
trunk/tools/jxmlc/: Makefile.am  iface_tpl.cpp  iface_tpl.h  jxmlc.in  schema_tpl.cpp  schema_tpl.h
trunk/tools/jxmlc/validation/: jde.xsd  validate_xml.py
