AC_INIT(jde+,0.71,dlobato@gsyc.urjc.es,jde+)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE


AC_PREFIX_DEFAULT(/usr/local/jde+-AC_PACKAGE_VERSION)

#Evitamos flag -O2 que vuelve loco a gdb
CXXFLAGS="-g -Wall"
AC_PROG_CXX

AC_HEADER_STDC
AC_LANG_CPLUSPLUS

AC_CONFIG_SUBDIRS(libltdl)

AC_LIBTOOL_DLOPEN
AC_LIBLTDL_CONVENIENCE
#AC_ENABLE_SHARED
AC_PROG_LIBTOOL
AC_SUBST(INCLTDL)
AC_SUBST(LIBLTDL)

#AC_MSG_CHECKING([for local libconfig use])
#AC_ARG_ENABLE([local-libconfig],
#		[  --enable-local-libconfig   Use instaled libconfig instead of v0.7],
#		[local_libconfig=$enableval],
#		[local_libconfig=no])
#AC_MSG_RESULT([$local_libconfig])

#AM_CONDITIONAL(USE_INSTALLED_LIBCONFIG, test x$local_libconfig = xyes)

#if test x$local_libconfig = xyes
#then
#  AC_CHECK_LIB(config++, main,,AC_MSG_ERROR(local libconfig not found))
#  CONFIG_LINK=-lconfig++
#  AC_SUBST(CONFIG_LINK)
#else
#  AC_CONFIG_SUBDIRS(libconfig-0.7)
#  CONFIG_LIB_DIR=libconfig-0.7
#  AC_SUBST(CONFIG_LIB_DIR)
#fi

PKG_CHECK_MODULES(LIBJDEDEPS,libccgnu2)
PKG_CHECK_MODULES(JDESCOPEDEPS,glibmm-2.4 libglademm-2.4 gthread-2.0)

AC_CHECK_HEADERS([readline/readline.h readline/history.h],[],AC_MSG_ERROR(readline headers not found),[])
AC_CHECK_LIB([readline],[readline],[],AC_MSG_ERROR(readline library not found),[])
READLINE_LIB=-lreadline
AC_SUBST(READLINE_LIB)

#JDEX_SRC_DIR="\$(top_srcdir)/src"
#JDEX_INC_DIR="\$(top_srcdir)/include"
#AC_SUBST(JDEX_SRC_DIR)
#AC_SUBST(JDEX_INC_DIR)

AC_PATH_PROG(DOXYGEN, doxygen, no)
AC_SUBST(DOXYGEN)
AM_CONDITIONAL(DOXY, test "$DOXYGEN" != "no")

pkgdatadir=${datadir}/AC_PACKAGE_NAME
AC_SUBST(pkgdatadir)
#fixme
AC_DEFINE_UNQUOTED(PIXMAPDIR, "${prefix}/share/AC_PACKAGE_NAME/pixmap")

AC_OUTPUT([
Makefile
corejde+/Makefile
corejde+/src/Makefile
corejde+/include/Makefile
corejde+/include/jde+/Makefile
docs/Makefile
docs/doxygen.conf
tools/Makefile
tools/autoproject/Makefile
tools/autoproject/jdeinit_project
tools/jxmlc/Makefile
tools/jde+scope/Makefile
])
