AUTOMAKE_OPTIONS = no-dependencies
MAINTAINERCLEANFILES = Makefile.in
CLEANFILES = jdeinit_project
EXTRA_DIST = jdeinit_project.in

nodist_bin_SCRIPTS = jdeinit_project

autopdatadir = @pkgdatadir@/autoproject

dist_autopdata_DATA = configure.in.tpl AUTHORS ChangeLog \
			COPYING INSTALL NEWS README
