AUTOMAKE_OPTIONS = no-dependencies
MAINTAINERCLEANFILES = Makefile.in

#cabeceras usadas para compilar, pero que no se instalaran
noinst_HEADERS = schemastate.h conditionallock.h

jdexincludedir = $(includedir)/jde+
jdexinclude_HEADERS = data.h \
			hierarchy.h \
			isc.h \
			message.h \
			messageprocessor.h \
			pointer.h \
			privatedata.h \
			schemaimplementation.h \
			schemainstancefacade.h \
			schemainstance.h \
			schemainterface.h \
			schematypes.h \
			singleton.h \
			util.h
